# routine_test

./: .clang-format  Cpp随笔.md  README.md
28种未定义行为/: 1.nullptr.cc  10.functionPtr.cc  11.nonInitVar.cc  12.pointerMath.cc  13.nonInitPointer.cc  14.accessDestoriedMemory.cc  15.accessDestroiedObj.cc  16.match.cc  18.sameto17.cc  19.libfunc.cc  2.end.cc  20.libmemcpy.cc  21.libmemcpy2.cc  22.datarace.cc  23.threadmutex.cc  24.recursive_mutex.cc  25.containerReference.cc  26.vector.cc  27.vector.back.cc  28.iterator.cc  3.this.cc  4.reinterpret_cast.cc  5.union.cc  6.alignas.cc  6.overflow.cc  7.overflow.cc  7.shift_overflow.cc  8.divzero.cc  9.returnvalue.cc
CUDA/: CMakeLists.txt  CUDA.md  main.cu
Cpp17_test/: test_as_const.cc  test_optional.cc  test_reduce.cc  test_vector.cc
Cpp20_test/: test_address.cc  test_attribute.cc  test_concept.cc  test_construct_at.cc  test_coroutine.cc  test_format.cc  test_init.cc  test_jthread.cc  test_module.cc  test_ranges.cc  test_requires.cc
Cpp23_test/: HelloCpp.cc
Python/: HelloWorld.py  洛谷P4779.py
demo/: perf.data  perf.data.old  test_  test_.cc  test_:_,  test_:_,.cc  test_FILE_LINE.cc  test_arg  test_class.cc  test_erase  test_function.cc  test_go.go  test_hashtable  test_hashtable.cc  test_perf.cc  test_pointerToclass.cc  test_strlen  test_swap.cc  test_type.cc  test_union  test_union.cc  test_vector.cc
春の轮子/: CMakeLists.txt  LRUCache  SkipLists  qc_LRUCache.cc  qc_SkipLists.cc  qc_list.cc  qc_optional.cc  qc_string.cc  qc_vector  qc_vector.cc
春の轮子/test/: test_list.cc  test_vector.cc
春の轮子/无注释臻享版/: list.hpp  vector.hpp
(+81 files in other folders)
